--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
         <div class="about">
             <div class="photo">
-                <img src="myphoto.jpeg">
+                <img src="myphoto.png">
             </div>
             <div class="me">
                 <div class="desc">
