--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                 </div>
                 <p id="webDesigner">~ Web-Developer ~</p>
-                <p id="language">HTML / CSS / JAVASCRIPT / DJANGO</p>
+                <p id="language">HTML / CSS / JAVASCRIPT</p>
                 <a href="#fifth">Contact Me</a>
             </div>
         </div>
